<resources>
    <string name="app_name">TNT</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_mine">Mine</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="login">Login</string>
    <string name="slogan">Efficiency is everything</string>
    <string name="account">Account</string>
    <string name="sms_code">password</string>
    <string name="get_sms_code">Get SMS Code</string>
    <!--<string name="get_sms_code">Get SMS Code</string>-->


    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
</resources>
